some backend mods

--- a/module/Square/view/square/booking/confirmation.phtml
+++ b/module/Square/view/square/booking/confirmation.phtml
@@ -64,7 +64,7 @@ function showHide() {
             </p>
 
             <div style="margin-left: 32px;">
-                <input type="checkbox" name="bf-accept-rules-document" id="bf-accept-rules-document">
+                <input type="checkbox" name="bf-accept-rules-document" id="bf-accept-rules-document" checked="true">
                 <label for="bf-accept-rules-document"><?= sprintf($this->t('Yes, I have %1$sread and accepted%2$s the "%3$s"'), '<b>', '</b>', $square->getMeta('rules.document.name', $this->t('Rules-document'))) ?></label>
             </div>
 
@@ -79,7 +79,7 @@ function showHide() {
             <div style="margin-left: 32px;"><?= $square->getMeta('rules.text') ?></div>
 
             <div style="margin-left: 32px;">
-                <input type="checkbox" name="bf-accept-rules-text" id="bf-accept-rules-text">
+                <input type="checkbox" name="bf-accept-rules-text" id="bf-accept-rules-text" checked="true">
                 <label for="bf-accept-rules-text"><?= sprintf($this->t('Yes, I have %sread and accepted%s these rules and notes'), '<b>', '</b>') ?></label>
             </div>
 
